{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "OnFoot",
            "id": "ab9792b6-47c7-4fd1-9944-fadcab59bc8d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "327b9a8b-94dc-4c3a-adcd-7b7e9bc155b3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "719cb41b-8ce6-40f6-89a7-3fd220eb463f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "621dc4e7-d3ab-47db-97d8-7069b034c58b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "cfb07ef1-76ce-46d9-9e62-33dc0f654c33",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SlowWalk",
                    "type": "Button",
                    "id": "c93ee351-d62d-4d56-962a-c8984643efbf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackPressed",
                    "type": "Button",
                    "id": "5eb66d2d-2cdd-4adf-bb79-866c4ab77d97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackHold",
                    "type": "Button",
                    "id": "9c6f2d58-fd47-4ee2-b952-c3c00e1b5ae3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ADSPressed",
                    "type": "Button",
                    "id": "791f7fe6-5914-4277-90fe-146eb042b2c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ADSReleased",
                    "type": "Button",
                    "id": "f904b882-bace-4329-adf3-2f13dfdc681c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "ReloadPressed",
                    "type": "Button",
                    "id": "eb318639-60e5-41b6-976e-5d640963ff83",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EquipNextWeaponPressed",
                    "type": "Button",
                    "id": "aab11e9c-5d59-4d9c-a872-b1e246e178d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EquipPreviousWeaponPressed",
                    "type": "Button",
                    "id": "08fc1cce-af94-4628-87c8-9d5a54a44e34",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EquipWeaponOnePressed",
                    "type": "Button",
                    "id": "34559633-515f-4db8-8f29-b5710d3dbcc3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EquipWeaponTwoPressed",
                    "type": "Button",
                    "id": "72f63924-3655-4b54-9766-9b44b46c1dae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EquipFlashbangPressed",
                    "type": "Button",
                    "id": "ee552b60-50b4-41dd-905e-461cf0421b66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "7887dd47-b36f-46f2-a467-cdb02ea5d9af",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b009e26a-d86f-4228-afbe-27e4a1f1d329",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e045cda3-dcee-4b89-b14e-963d992435bd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d72b3f46-b9dc-4a3e-b43c-d8c3b15f44e3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6830eec6-9b22-4fec-89ae-94ed43507009",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left-Stick",
                    "id": "444b18c1-29b6-4682-855d-49f2c1cb64c9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0cf57481-1f91-431d-8fdd-e5f51d623248",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6e0d68bd-f808-4eb3-8caa-68355b711297",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c9680451-c4c3-415a-bba1-4eab01d56a87",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "028350b4-ad1b-4b3f-b0f7-fc3b282cbd94",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "17fb15e5-f956-4aab-8b9f-3031d23c92d5",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "433b29c4-57cb-4fc8-a011-b92360ef2db7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c08e67ff-60ae-41d3-8f41-f61a1a300ab1",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8456b3c-c79d-4d59-919f-dace83b687e9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9202dfa-ac04-4c69-b42c-50c88883cb4a",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1948c5e-1220-415b-8b15-34bfad38ea61",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89e0a6d1-98cd-4a2e-8e0a-612155391aa8",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "SlowWalk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8032bf8-0b45-49db-93c2-fd887d453253",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SlowWalk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "920f7040-297d-4f6c-a008-a1b2cbb8bce3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "AttackPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d40a4761-e97d-4ae8-8455-e22cc041f218",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ADSPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e111e55-5afe-470e-a384-4b19d0e75d5e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "AttackHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb82df59-1ae7-4e7d-b19c-ceac0eec805c",
                    "path": "<Keyboard>/r",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ReloadPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb1054b1-fefa-41fa-aae1-246443d19a1e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ADSReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "440541c5-d114-40ef-8832-be8e8b61a6a5",
                    "path": "<Keyboard>/tab",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "EquipNextWeaponPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1e9bc58-07e1-4d0a-a856-bf5239944fdb",
                    "path": "<Keyboard>/capsLock",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "EquipPreviousWeaponPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35e46b87-ced7-48e5-a905-1edde78e5d17",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "EquipWeaponOnePressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54be82f7-503a-47c9-9767-a27385f862c8",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "EquipWeaponTwoPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e88e552-1a0f-4214-a3e3-400532924ee5",
                    "path": "<Keyboard>/g",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "EquipFlashbangPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}